<resources>
    <string name="app_name">Instagram</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_reels">Reels</string>
    <string name="title_shop">Shop</string>
    <string name="title_profile">Profile</string>
    <string name="post">Post</string>
</resources>